Mark FileWritingIteratorIT as integration test